syntax = "proto3";

package order;

option go_package = "golectro-order/internal/delivery/grpc/proto/order;order";

service OrderService {
    rpc GetOrderByID (GetOrderByIdRequest) returns (GetOrderByIdResponse);
}

message GetOrderByIdRequest {
    string id = 1;
}

message OrderItem {
    string id = 1;
    string product_id = 2;
    int32 quantity = 3;
    int64 price = 4;
}

message GetOrderByIdResponse {
    string id = 1;
    string user_id = 2;
    int64 total_amount = 3;
    string invoice_id = 4;
    string status = 5;
    string created_at = 6;
    string updated_at = 7;
    repeated OrderItem items = 8;
}
